--- a/frontend/src/css/global.css
+++ b/frontend/src/css/global.css
@@ -641,6 +641,10 @@ video {
   bottom: 2.5rem;
 }
 
+.bottom-\[17\%\] {
+  bottom: 17%;
+}
+
 .bottom-\[60px\] {
   bottom: 60px;
 }
@@ -701,8 +705,12 @@ video {
   top: 2.5rem;
 }
 
-.top-\[10\%\] {
-  top: 10%;
+.top-\[15\%\] {
+  top: 15%;
+}
+
+.top-\[30\%\] {
+  top: 30%;
 }
 
 .top-poke-guess {
@@ -713,32 +721,48 @@ video {
   top: 300px;
 }
 
+.top-\[40\%\] {
+  top: 40%;
+}
+
+.top-\[39\%\] {
+  top: 39%;
+}
+
+.bottom-\[100px\] {
+  bottom: 100px;
+}
+
+.bottom-5 {
+  bottom: 1.25rem;
+}
+
+.bottom-\[50px\] {
+  bottom: 50px;
+}
+
+.bottom-\[40px\] {
+  bottom: 40px;
+}
+
+.bottom-\[20\%\] {
+  bottom: 20%;
+}
+
 .top-\[20\%\] {
   top: 20%;
 }
 
-.bottom-\[10\%\] {
-  bottom: 10%;
+.top-\[10\%\] {
+  top: 10%;
 }
 
-.bottom-\[15\%\] {
-  bottom: 15%;
+.top-\[0\%\] {
+  top: 0%;
 }
 
-.bottom-\[16\%\] {
-  bottom: 16%;
-}
-
-.bottom-\[17\%\] {
-  bottom: 17%;
-}
-
-.top-\[15\%\] {
-  top: 15%;
-}
-
-.bottom-\[-10px\] {
-  bottom: -10px;
+.top-\[16\%\] {
+  top: 16%;
 }
 
 .-z-10 {
@@ -897,6 +921,10 @@ video {
   margin-top: 300px;
 }
 
+.-mb-\[90px\] {
+  margin-bottom: -90px;
+}
+
 .block {
   display: block;
 }
@@ -963,9 +991,9 @@ video {
   height: 1.5rem;
 }
 
-.size-\[60\%\] {
-  width: 60%;
-  height: 60%;
+.size-\[50\%\] {
+  width: 50%;
+  height: 50%;
 }
 
 .size-auto {
@@ -993,11 +1021,6 @@ video {
   height: 300px;
 }
 
-.size-\[50\%\] {
-  width: 50%;
-  height: 50%;
-}
-
 .h-10 {
   height: 2.5rem;
 }
@@ -1006,12 +1029,20 @@ video {
   height: 4rem;
 }
 
+.h-2 {
+  height: 0.5rem;
+}
+
 .h-20 {
   height: 5rem;
 }
 
 .h-24 {
   height: 6rem;
+}
+
+.h-3 {
+  height: 0.75rem;
 }
 
 .h-4 {
@@ -1034,8 +1065,8 @@ video {
   height: 100vh;
 }
 
-.h-\[60\%\] {
-  height: 60%;
+.h-\[40\%\] {
+  height: 40%;
 }
 
 .h-auto {
@@ -1058,40 +1089,12 @@ video {
   height: 300px;
 }
 
-.h-\[100px\] {
-  height: 100px;
+.h-\[250px\] {
+  height: 250px;
 }
 
-.h-\[50\%\] {
-  height: 50%;
-}
-
-.h-\[20\%\] {
-  height: 20%;
-}
-
-.h-\[30\%\] {
-  height: 30%;
-}
-
-.h-\[40\%\] {
-  height: 40%;
-}
-
-.h-\[10\%\] {
-  height: 10%;
-}
-
-.h-2 {
-  height: 0.5rem;
-}
-
-.h-\[20px\] {
-  height: 20px;
-}
-
-.h-3 {
-  height: 0.75rem;
+.h-\[200px\] {
+  height: 200px;
 }
 
 .max-h-12 {
@@ -1100,6 +1103,14 @@ video {
 
 .w-10 {
   width: 2.5rem;
+}
+
+.w-2 {
+  width: 0.5rem;
+}
+
+.w-3 {
+  width: 0.75rem;
 }
 
 .w-4 {
@@ -1166,20 +1177,36 @@ video {
   width: 150px;
 }
 
-.w-\[150px\] {
-  width: 150px;
+.w-\[250px\] {
+  width: 250px;
 }
 
-.w-\[100px\] {
-  width: 100px;
+.w-\[40\%\] {
+  width: 40%;
 }
 
-.w-2 {
-  width: 0.5rem;
+.w-1\/3 {
+  width: 33.333333%;
 }
 
-.w-3 {
-  width: 0.75rem;
+.w-1 {
+  width: 0.25rem;
+}
+
+.w-\[20\%\] {
+  width: 20%;
+}
+
+.w-px {
+  width: 1px;
+}
+
+.w-1\/5 {
+  width: 20%;
+}
+
+.w-1\/4 {
+  width: 25%;
 }
 
 .max-w-12 {
@@ -1382,11 +1409,6 @@ video {
   border-bottom-left-radius: 0.25rem;
 }
 
-.rounded-t-2xl {
-  border-top-left-radius: 1rem;
-  border-top-right-radius: 1rem;
-}
-
 .rounded-l-full {
   border-top-left-radius: 9999px;
   border-bottom-left-radius: 9999px;
@@ -1395,6 +1417,11 @@ video {
 .rounded-r-full {
   border-top-right-radius: 9999px;
   border-bottom-right-radius: 9999px;
+}
+
+.rounded-t-2xl {
+  border-top-left-radius: 1rem;
+  border-top-right-radius: 1rem;
 }
 
 .border {
@@ -1440,6 +1467,11 @@ video {
 .border-gray-300 {
   --tw-border-opacity: 1;
   border-color: rgb(209 213 219 / var(--tw-border-opacity));
+}
+
+.border-gray-500 {
+  --tw-border-opacity: 1;
+  border-color: rgb(107 114 128 / var(--tw-border-opacity));
 }
 
 .border-gray-600 {
@@ -1490,11 +1522,6 @@ video {
 .border-yellow-500 {
   --tw-border-opacity: 1;
   border-color: rgb(234 179 8 / var(--tw-border-opacity));
-}
-
-.border-gray-500 {
-  --tw-border-opacity: 1;
-  border-color: rgb(107 114 128 / var(--tw-border-opacity));
 }
 
 .bg-black {
@@ -1572,6 +1599,11 @@ video {
   background-color: rgb(251 146 60 / var(--tw-bg-opacity));
 }
 
+.bg-pink-500 {
+  --tw-bg-opacity: 1;
+  background-color: rgb(236 72 153 / var(--tw-bg-opacity));
+}
+
 .bg-red-400 {
   --tw-bg-opacity: 1;
   background-color: rgb(248 113 113 / var(--tw-bg-opacity));
@@ -1599,11 +1631,6 @@ video {
 .bg-yellow-500 {
   --tw-bg-opacity: 1;
   background-color: rgb(234 179 8 / var(--tw-bg-opacity));
-}
-
-.bg-pink-500 {
-  --tw-bg-opacity: 1;
-  background-color: rgb(236 72 153 / var(--tw-bg-opacity));
 }
 
 .bg-artistic-conic {
@@ -1753,6 +1780,10 @@ video {
   padding-bottom: 1.5rem;
 }
 
+.pb-2 {
+  padding-bottom: 0.5rem;
+}
+
 .pb-3 {
   padding-bottom: 0.75rem;
 }
@@ -1763,6 +1794,10 @@ video {
 
 .pl-3 {
   padding-left: 0.75rem;
+}
+
+.pr-2 {
+  padding-right: 0.5rem;
 }
 
 .ps-10 {
@@ -1791,14 +1826,6 @@ video {
 
 .pt-\[50px\] {
   padding-top: 50px;
-}
-
-.pr-2 {
-  padding-right: 0.5rem;
-}
-
-.pb-2 {
-  padding-bottom: 0.5rem;
 }
 
 .text-center {
@@ -1849,6 +1876,11 @@ video {
 .text-xs {
   font-size: 0.75rem;
   line-height: 1rem;
+}
+
+.text-base {
+  font-size: 1rem;
+  line-height: 1.5rem;
 }
 
 .font-bold {
